features/ post method for form is working but not saving to db

--- a/petfax/templates/fact/index.html
+++ b/petfax/templates/fact/index.html
@@ -9,11 +9,6 @@
 
 </head>
 <body>
-    <form action="POST">
-        <label for="submitter">Please enter you name</label>
-        <input type="text" name="submitter">
-        <label for="fact">What fact have you found</label>
-        <input type="text" name="fact">
-    </form>
+    <h1>Userfax</h1>
 </body>
 </html>
